src/_includes/components/callout.css
/* Warning */
.elv-callout {
	--callout-primary: hsl(var(--callout-hue), 86%, 70%);
	--callout-primarytext: hsl(var(--callout-hue), 100%, 0%);
	--callout-secondary: hsl(var(--callout-hue), 86%, 94%);

	--callout-sidebartext: hsl(var(--callout-hue), 86%, 35%);
	--callout-code: hsla(var(--callout-hue), 86%, 70%, .25);
	--callout-label-skew: 11deg;

	line-height: 1.5;
	margin-inline: -1rem;
	margin-block: 1em;
	background-color: var(--callout-secondary);
	border: 1.5px solid var(--callout-primary);
}
details .elv-callout {
	margin-left: 0;
	margin-right: 0;
}

/* #2col */
@media (min-width: 41.4375em) {
	.elv-callout {
		border-radius: 0.3em;
	}
}

@media (prefers-color-scheme: dark) {
	.elv-callout {
		--callout-primary: hsl(var(--callout-hue), 100%, 22%);
		--callout-secondary: hsl(var(--callout-hue), 100%, 12%);
		--callout-primarytext: hsl(var(--callout-hue), 100%, 100%);
	}
	.elv-callout,
	.elv-callout a {
		color: var(--callout-primarytext);
	}
}
table .elv-callout {
	margin-left: 0;
	margin-right: 0;
	margin-bottom: 1em;
}

.elv-callout-c {
	padding: 0.75em 1em; /* 12px 16px /16 */
}

.elv-callout-c > :is(p, ul, ol, h2):first-child {
	margin-block-start: 0;
}
.elv-callout-c > :is(p, ul, ol, h2):last-child {
	margin-block-end: 0;
}


.elv-callout {
	display: flex;
	flex-direction: column;
}

.elv-callout-skew {
	position: relative;
}
.elv-callout-label {
	align-self: flex-start;
	font-size: 0.9375em; /* 15px /16 */
	font-weight: 600;
}
.elv-callout-label,
.elv-callout-skew:before,
.elv-callout-skew:after {
	margin: 0;
	margin-right: 0.5em;
	border-radius: 0 0 0.3em 0;
	align-items: center;
	padding: 0 1rem;
}
.elv-callout-skew:before,
.elv-callout-skew:after {
	display: inline-flex;
	position: absolute;
	left: 0;
	top: 0;
	font-size: 0.8125em; /* 13px /16 */
	font-weight: 800;
}
.elv-callout-label {
	background-color: var(--callout-primary);
	color: var(--callout-primarytext);
}
.elv-callout code {
	background-color: var(--callout-code, var(--callout-primary));
}
.elv-callout a,
.elv-callout :visited {
	color: var(--callout-primarytext);
}
.elv-callout pre {
	margin-top: 1em;
	margin-bottom: 1em;
}

.elv-callout-label:first-child:last-child {
	font-size: 1.2em;
	background-color: transparent;
}

/* Skewed text (demo) */
.elv-callout-skew {
	--callout-sidebar-size: 2.777777777778em; /* 50px /18 */
	overflow: hidden;
	padding-left: var(--callout-sidebar-size);
	border-color: var(--callout-sidebartext);
}
.elv-callout-skew:after {
	display: none;
}
@media (min-width: 37.5em) {
	/* 600px */
	.elv-callout-skew {
		padding-right: var(--callout-sidebar-size);
	}
	.elv-callout-skew:after {
		display: block;
	}
}
.elv-callout-skew:before,
.elv-callout-skew:after {
	content: var(--callout-sidebar-content);
	width: min-content;
	overflow: hidden;
	top: -2em;
	bottom: -1em;
	border-radius: 0;
	background-color: transparent;
	color: var(--callout-sidebartext);
	font-weight: 700;
	transform: skewY(calc(-1 * var(--callout-label-skew)));
	padding: 0 0.2857142857143em; /* 4px /14 */
	margin: 0;
}
.elv-callout-skew:after {
	right: 0;
	left: auto;
	margin-right: 0;
	margin-left: 0.5em;
	transform: skewY(var(--callout-label-skew));
}

/* Demo */
.elv-callout-skew--demo {
	--callout-sidebar-content: "DEMO DEMO DEMO DEMO DEMO DEMO DEMO DEMO DEMO DEMO DEMO DEMO DEMO DEMO DEMO DEMO DEMO DEMO DEMO DEMO DEMO DEMO DEMO DEMO DEMO DEMO DEMO DEMO DEMO DEMO DEMO DEMO DEMO DEMO DEMO DEMO DEMO DEMO DEMO DEMO DEMO DEMO DEMO DEMO DEMO DEMO DEMO DEMO DEMO DEMO DEMO DEMO DEMO DEMO DEMO DEMO DEMO DEMO DEMO DEMO DEMO DEMO DEMO DEMO DEMO DEMO DEMO DEMO DEMO DEMO DEMO DEMO DEMO DEMO DEMO DEMO " / " Demo ";
}
/* Pitfall */
.elv-callout-skew--pitfall {
	--callout-sidebar-size: 3.444444444444em; /* 62px /18 */
	--callout-sidebar-content: "PITFALL PITFALL PITFALL PITFALL PITFALL PITFALL PITFALL PITFALL PITFALL PITFALL PITFALL PITFALL PITFALL PITFALL PITFALL PITFALL PITFALL PITFALL " / " Pitfall ";
}

/* Style the content inside of the callout */
.elv-callout > :first-child {
	margin-top: 0;
}
.elv-callout > :last-child {
	margin-bottom: 0;
}

/* Sticky callout is for legacy docs versions */
body > .elv-callout-sticky .elv-callout-label {
	display: none;
}
body > .elv-callout-sticky .elv-callout {
	margin: 0;
	border-left: 0;
	border-right: 0;
	border-radius: 0;
	margin-bottom: 1em;
}
body > .elv-callout-sticky .elv-callout-c {
	text-align: center;
	text-wrap: balance;
}
@media (min-height: 43.75em) { /* 700px */
	body > .elv-callout-sticky {
		position: sticky;
		top: 0;
		z-index: 12;
		box-shadow: 0 3px 0 0 rgba(0, 0, 0, 0.08);
	}
}

/* in left nav */
.elv-toc .elv-callout {
	margin-block-start: 0;
}
.elv-toc .elv-callout-c {
	flex-grow: 1;
}
.elv-toc .elv-callout-label {
	margin-inline-end: 0;
}

/* #2col */
@media (max-width: 41.375em) {
	.elv-toc .elv-callout {
		border-inline-width: 0;
	}
	.elv-toc .elv-callout {
		display: none;
	}
}

/* #2col */
@media (min-width: 41.4375em) {
	.elv-toc .elv-callout:first-child:has(+ .elv-callout) {
		display: flex;
		flex-direction: row;
		flex-wrap: wrap;
	}
	.elv-toc .elv-callout-label,
	.elv-toc .elv-callout-c {
		padding-inline-start: 1.25rem; /* 20px /16 */
	}
	.elv-toc .elv-callout:first-child:has(+ .elv-callout) .elv-callout-c {
		padding-inline-start: 1rem;
		padding-block: .5rem;
	}
	.elv-toc .elv-callout {
		margin-right: 0;
		margin-left: -1rem;
		font-size: 0.875em; /* 14px /16 */
		line-height: 2;
	}
}

/* #2col × 1130px */
@media (min-width: 41.4375em) and (max-width: 70.625em) {
	.elv-toc .elv-callout {
		border-top-left-radius: 0;
		border-bottom-left-radius: 0;
	}
}


/* Themes */
.elv-callout {
	--callout-hue: 195;
}
/* Error */
.elv-callout-error {
	--callout-hue: 0;
}
/* Warning */
.elv-callout-warn {
	--callout-hue: 60;
}
.elv-callout-skew--demo {
	--callout-hue: 270;
}
.elv-callout-skew--pitfall {
	--callout-hue: 36;
}

